# FastQC-Rust

./: .gitattributes  .gitignore  .project  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  UPSTREAM.toml  fastqc
.github/workflows/: ci.yml  docs.yml  release.yml  upstream-check.yml
.playwright-mcp/: page-2026-04-13T14-25-45-568Z.yml  page-2026-04-13T14-29-09-286Z.yml
Templates/: fastqc.css  report_template.html
Templates/Plots/: boxplot.js  boxplot_quality_zones.js  continuous_line_graph.js  heatmap.js  line_graph.js  line_series.js  quality_distribution.js
assets/templates/modern/: fastqc.css
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/components/: Breadcrumb.astro
docs/src/layouts/: Base.astro
docs/src/pages/: credits.astro  index.astro  library.astro  modules.astro  templates.astro
docs/src/styles/: global.css
fastqc-rs/: .gitignore  CLAUDE.md  Cargo.toml
fastqc-rs/src/: config.rs  main.rs  runner.rs
fastqc-rs/src/modules/: adapter_content.rs  basic_stats.rs  duplication_level.rs  gc_content.rs  kmer_content.rs  mod.rs  n_content.rs  overrepresented_seqs.rs  per_base_quality.rs  per_base_sequence_content.rs  per_sequence_quality.rs  per_tile_quality.rs  sequence_length_distribution.rs
fastqc-rs/src/report/: archive.rs  html.rs  text.rs
fastqc-rs/src/report/charts/: line_graph.rs  mod.rs  quality_boxplot.rs  tile_graph.rs
fastqc-rs/src/sequence/: bam.rs  casava.rs  fast5.rs  fastq.rs
fastqc-rs/src/utils/: base_counts.rs  base_group.rs  mod.rs  phred.rs  quality_count.rs
fastqc-rs/tests/: create_test_fast5.rs  integration.rs
fastqc-rs/tests/data/: single_read.fast5
src/: config.rs  lib.rs  main.rs  runner.rs
src/modules/: adapter_content.rs  basic_stats.rs  duplication_level.rs  gc_content.rs  kmer_content.rs  mod.rs  n_content.rs  overrepresented_seqs.rs  per_base_quality.rs  per_base_sequence_content.rs  per_sequence_quality.rs  per_tile_quality.rs  sequence_length_distribution.rs
src/report/: archive.rs  html.rs  mod.rs  text.rs
src/report/charts/: line_graph.rs  mod.rs  quality_boxplot.rs  tile_graph.rs
src/report/templates/: classic.rs  mod.rs  modern.rs
src/sequence/: bam.rs  casava.rs  fast5.rs  fastq.rs  group.rs  mod.rs
src/utils/: base_group.rs  dna.rs  format.rs  quality_count.rs
tests/: create_test_fast5.rs  integration.rs
tests/data/: gen_realistic.py  multi_read.fast5  realistic.fastq
tests/equivalence/: compare.py  generate_reference.sh  test_cases.yaml
tests/equivalence/patches/: README.md  _universal_fastqc_data.patch  _universal_fastqc_report.patch  complex_casava_per_sequence_gc_content_svg.patch  complex_dup_length_10_adapter_content_svg.patch  complex_expgroup_per_base_sequence_content_svg.patch  complex_expgroup_per_sequence_quality_svg.patch  complex_kmers10_duplication_levels_svg.patch  complex_min_length_10_adapter_content_svg.patch  complex_min_length_10_fastqc_data.patch  complex_nogroup_sequence_length_distribution_svg.patch  minimal_casava_nofilter_duplication_levels_svg.patch  minimal_casava_nofilter_per_base_quality_svg.patch  minimal_casava_nofilter_per_base_sequence_content_svg.patch  minimal_expgroup_per_sequence_gc_content_svg.patch  minimal_kmers5_per_base_n_content_svg.patch  (+11 more)
(+48 files in other folders)
